tests/snapshots/run_wpt_conformance__coreml_batchNormalization_float32_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "batch_normalization.https.any.js",
    "batchNormalization float32 5D tensor default options",
    "coreml",
    "PASS",
)
