tests/snapshots/run_wpt_conformance__coreml_cast_BigInt_to_int64_overflow.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
mlNumber.https.any.js cast BigInt to int64 overflow, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported constant data type: Int64

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: i64[5] @bytes([10, 0, 0, 0, 251, 255, 255, 255, 246, 255, 255, 255, 4, 0, 0, 0, 254, 255, 255, 255, 255, 255, 255, 255, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue=null, minValue="9223372036854775820");
  }

  outputs { clampOutput; }
}
