tests/snapshots/run_wpt_conformance__coreml_cast_BigInt_to_uint64_overflow.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
mlNumber.https.any.js cast BigInt to uint64 overflow, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported constant data type: Uint64

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u64[4] @bytes([246, 255, 255, 255, 9, 0, 0, 0, 127, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue=null, minValue="184467440737095511615");
  }

  outputs { clampOutput; }
}
